--- a/templates/article/history_validation.html
+++ b/templates/article/history_validation.html
@@ -1,32 +1,23 @@
-{% extends "article/base.html" %}
+{% extends "article/validation.html" %}
 {% load humane_date %}
 
 {% block title %}
-Liste des articles soumis en validation
+Historique de validation de l'article
 {% endblock %}
 
 {% block meta %}
     <meta name="description" content="" />
 {% endblock %}
 
-
 {% block headline %}
-Liste des Articles soumis en validation
+Historique de validation de l'article
 {% endblock %}
 
 {% block breadcrumb %}
-    <li class="current"><a href="#">Index</a></li>
+    <li class="current"><a href="#">Historique</a></li>
 {% endblock %}
 
 {% block headline-actions %}
-    <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions">
-        <h3>Actions</h3>
-        <ul>
-            <li><a href="{% url "zds.article.views.list_validation" %}">Zone de validation</a></li>
-            <li><a href="{% url "zds.article.views.list_validation" %}?type=reserved">En cours de validation</a></li>
-            <li><a href="{% url "zds.article.views.list_validation" %}?type=orphan">En attente de validateur</a></li>
-        </ul>
-    </div>
 {% endblock %}
 
 {% block content %}
@@ -53,7 +44,7 @@ Liste des Articles soumis en validation
                     </td>
                     <td>
                         {% for subcategory in validation.article.subcategory.all %}
-                        <a href="{% url "zds.article.views.list_validation" %}?subcategory={{subcategory.pk}}" class="secondary" >{{ subcategory.title }}</a><br />
+                        <a href="{% url "zds.article.views.history_validation" article.pk %}?subcategory={{subcategory.pk}}">{{ subcategory.title }}</a><br />
                         {% endfor %}
                     </td>
                     <td>
