--- a/templates/member/login.html
+++ b/templates/member/login.html
@@ -1,4 +1,5 @@
 {% extends "member/base.html" %}
+{% load crispy_forms_tags %}
 
 {% block title %}
     Connexion
@@ -37,49 +38,7 @@
 {% if not user.is_authenticated %}
 <div class="row">
     <div class="large-7 large-offset-1 columns">
-        <form method="post" action="{% url "zds.member.views.login_view" %}{% if next_page %}?next={{ next_page }}{% endif %}">
-            <div class="row">
-                <div class="small-4 columns">
-                    <label class="right inline" for="id_username">Identifiant</label>
-                </div>
-                <div class="small-8 columns">
-                    <input type="text" name="username" id="id_username" maxlength="30" {% if form.username.value %}value="{{ form.username.value }}"{% endif %} />
-                </div>
-            </div>
-            <div class="row">
-                <div class="small-4 columns">
-                    <label class="right inline" for="id_password">Mot magique</label>
-                </div>
-                <div class="small-8 columns">
-                    <input type="password" name="password" id="id_password" maxlength="76" />
-                </div>
-            </div>
-            <div class="row">
-                <div class="small-4 columns"></div>
-                <div class="small-8 columns">
-                    <label>
-                        <input type="checkbox" name="remember">
-                        Connexion automatique
-                    </label>
-                    <label>
-                        <a href="{% url "zds.member.views.forgot_password" %}">Mot de passe oublié ?</a>
-                    </label>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="small-8 small-offset-4 columns">
-                    <button type="submit" class="button">
-                        Se connecter
-                    </button>
-                    <a href="/" class="button secondary">
-                        Annuler
-                    </a>
-                </div>
-            </div>
-
-            {% csrf_token %}
-        </form>
+        {% crispy form %}
     </div>
 </div>
 {% endif %}
