--- a/templates/member/settings_profile.html
+++ b/templates/member/settings_profile.html
@@ -6,13 +6,7 @@
     <li class="current"><a href="#">Profil</a></li>
 {% endblock %}
 
-{% block subnav %}
-    <dd class="active"><a href="{% url "zds.member.views.settings_profile" %}">Profil</a></dd>
-    <dd><a href="{% url "zds.member.views.settings_account" %}">Compte</a></dd>
-    <dd ><a href="{% url "zds.member.views.settings_user" %}">Pseudo/Email</a></dd>
-{% endblock %}
-
-{% block settings_form %}
+{% block content %}
     <div class="row">
         <div class="large-12 columns">
             {% crispy form %}
