--- a/templates/gallery/base.html
+++ b/templates/gallery/base.html
@@ -7,3 +7,16 @@
 {% block breadcrumb_base %}
     <li><a href="{% url "zds.gallery.views.gallery_list" %}">Galeries</a></li>
 {% endblock %}
+
+{% block sidebar %}
+<aside class="sidebar mobile-menu-hide">
+	<div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions">
+		<h3>Actions<span class="wide"> sur une galerie</span></h3>
+		<ul>
+			<li><a href="{% url "zds.gallery.views.gallery_list" %}">Liste des galeries</a></li>
+			<li><a href="{% url "zds.gallery.views.new_gallery" %}">Ajouter une galerie</a></li>
+			{% block headline-actions %}{% endblock %}
+		</ul>
+	</div>
+</aside>
+{% endblock %}
