--- a/templates/gallery/gallery_details.html
+++ b/templates/gallery/gallery_details.html
@@ -14,7 +14,11 @@
 {% endblock %}
 
 {% block breadcrumb %}
-    <li class="current"><a href="javascript:;">{{ gallery.title }}</a></li>
+    <li class="current"><a href="#">{{ gallery.title }}</a></li>
+{% endblock %}
+
+{% block headline-actions %}
+            <li><a href="{% url "zds.gallery.views.new_image" gallery.pk %}">Ajouter une image</a></li>
 {% endblock %}
 
 {% block content %}
@@ -50,16 +54,6 @@
                 <div class="large-8 columns">   
                     <h3>Images</h3>
                 </div>
-                <div class="large-4 columns">
-                    <div class="right">
-                        <a href="{% url "zds.gallery.views.new_image" gallery.pk %}" class="button">
-                            Ajouter une image
-                        </a>
-                        <button name="delete_multi" class="button secondary">
-                            Supprimer
-                        </button>
-                    </div>
-                </div>
             </div>
             <table>
                 <thead>
@@ -71,29 +65,28 @@
                 </thead>
                 <tbody>
                     {% for img in gallery.get_images %}
-                        <tr>
-                            <td>
-                                <input name="items" type="checkbox" value="{{ img.pk }}" />
-                            </td>
-                            <td>
-                                <div>
-                                    <a href="{% url "zds.gallery.views.edit_image" gallery.pk img.pk %}">
-                                        <img src="{{ img.physical.url }}" style="max-width:180px ;max-height:180px" data-caption="{{ img.title }}"
-                                             alt="{{ img.title }}" />
-                                    </a>
-                                </div>
-                            </td>
-                            <td>
-                                <a href="{% url "zds.gallery.views.edit_image" gallery.pk img.pk %}">{{ img.title }}</a>
-                            </td>
-                        </tr>
+                    <tr>
+                        <td>
+                            <input name="items" type="checkbox" value="{{ img.pk }}" />
+                        </td>
+                        <td>
+                            <div>
+                                <a href="{% url "zds.gallery.views.edit_image" gallery.pk img.pk %}">
+                                    <img src="{{ img.physical.url }}" style="max-width:180px ;max-height:180px" data-caption="{{ img.title }}"
+                                         alt="{{ img.title }}" />
+                                </a>
+                            </div>
+                        </td>
+                        <td>
+                            <a href="{% url "zds.gallery.views.edit_image" gallery.pk img.pk %}">{{ img.title }}</a>
+                        </td>
+                    </tr>
                     {% endfor %}
                 </tbody>
             </table>
+            <button name="delete_multi">Supprimer</button>
         {% csrf_token %}
         </form>
     </div>
 </div>
-
-
 {% endblock %}
