--- a/templates/article/view_online.html
+++ b/templates/article/view_online.html
@@ -3,6 +3,7 @@
 {% load markup %}
 {% load humane_date %}
 {% load profile %}
+{% load crispy_forms_tags %}
 
 {% block title %}
     {{ article.title }}
@@ -144,56 +145,12 @@
 {% if user.is_authenticated %}
 {% with profile=user|profile%}
 <section>
-    <form action="{% url "zds.article.views.answer" %}?article={{ article.pk }}" class="forum-message" method="POST" id="submit_form">
-        <div class="user">
-            <img src="{{profile.get_avatar_url}}" alt="" class="avatar avatar-link">
-        </div>
-        <div class="message">
-            <ul class="message-actions">
-                <li><a href="javascript:void(null);" class="ico-after alert">Fullscreen</a></li>
-            </ul>
-
-            <ul class="message-metadata message-buttons">
-                <li><a href="javascript:void(null);" class="ico-after">Gras</a></li>
-                <li><a href="javascript:void(null);" class="ico-after">Italique</a></li>
-                <li><a href="javascript:void(null);" class="ico-after">Barré</a></li>
-                <li><a href="javascript:void(null);" class="ico-after">Titre 1</a></li>
-                <li><a href="javascript:void(null);" class="ico-after">Titre 2</a></li>
-                <li><a href="javascript:void(null);" class="ico-after">Séparateur horizontal</a></li>
-                <li><a href="javascript:void(null);" class="ico-after">Lien</a></li>
-                <li><a href="javascript:void(null);" class="ico-after">Image</a></li>
-                <li><a href="javascript:void(null);" class="ico-after">Code</a></li>
-                <li><a href="javascript:void(null);" class="ico-after">Citation</a></li>
-            </ul>
-
-            <div class="message-content">
-                <textarea name="text" id="md_text" cols="30" rows="10" {% if article.is_locked or article.antispam %}disabled{% endif %} placeholder="Votre message au format Markdown.">{% if article.is_locked %}Ce article est verrouillé.{% elif article.antispam  %}Vous ne pouvez pas encore poster dans ce article (protection antispam de 15 min).{% endif %}</textarea>
-            </div>
-
-            <div class="message-bottom">
-                <div class="message-submit">
-                    <button type="submit" name="preview" class="button secondary" {% if article.is_locked or article.antispam %}disabled{% endif %}>Aperçu</button>
-                    <button type="submit" {% if article.is_locked or article.antispam %}disabled{% endif %} name="answer">Envoyer</button>
-                </div>
-            </div>
-        </div>
-        <input type="hidden" name="last_reaction" value="{{ last_reaction_pk }}" />
-        {% csrf_token %}
-    </form>
+    <div class="user">
+        <img src="{{profile.get_avatar_url}}" alt="" class="avatar avatar-link">
+    </div>
+    {% crispy form %}
 </section>
 {% endwith %}
 {% endif %}
-{% endblock %}
-
-{% block additionnal-js %}
-    <script>
-        /* anwser check */
-        $('#submit_form').submit(function(e){
-            if ((!$(this).find('textarea').val()) || ($(this).find('textarea').val().trim()=='')) {
-                alert('Votre message ne peut pas être vide.');
-                e.preventDefault();
-            }
-        })
-    </script>
 {% endblock %}
 
