Fixe links in headline

--- a/templates/article/edit.html
+++ b/templates/article/edit.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block breadcrumb %}
-    <li><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></li>
+    <li><a href="{{ article.get_absolute_online_url }}">{{ article.title }}</a></li>
     <li class="current"><a href="#">Éditer</a></li>
 {% endblock %}
 
