--- a/templates/article/view_online.html
+++ b/templates/article/view_online.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block headline %}
-    <a href="{{ article.get_absolute_url }}">{{ article.title }}</a><br />
+    <a href="{{ article.get_absolute_online_url }}">{{ article.title }}</a><br />
     <small>{{ article.description }}</small>
 {% endblock %}
 
