--- a/templates/article/answer.html
+++ b/templates/article/answer.html
@@ -14,8 +14,8 @@
 {% endblock %}
 
 {% block breadcrumb %}
-    <li class="current"><a href="#">{{ article.title }}</a></li>
-    <li class="current"><a href="javascript:;">Répondre à l'article</a></li>
+    <li class="current"><a href="{{ article.get_absolute_online_url }}">{{ article.title }}</a></li>
+    <li class="current"><a href="#">Répondre à l'article</a></li>
 {% endblock %}
 
 {% block content %}
