--- a/templates/forum/answer.html
+++ b/templates/forum/answer.html
@@ -1,5 +1,6 @@
 {% extends "forum/base.html" %}
 {% load profile %}
+{% load crispy_forms_tags %}
 
 {% block title %}
     Répondre au sujet
@@ -18,11 +19,21 @@
 
 {% block content %}
 
-{% with topic=topic %}
-    {% with profile=user|profile %}
-        {% include "forum/comment.part.html" %}
-    {% endwith %}
-{% endwith %}
+{% if newpost %}
+<div class="row">
+    <div class="large-12 columns">
+        <div class="alert-box alert">
+            <strong>Au moins un nouveau message a été posté</strong> dans la discussion
+            pendant que vous rédigiez le votre.
+        </div>
+    </div>
+</div>
+{% endif %}
+<div class="row">
+    <div class="large-12 columns">
+        {% crispy form %}
+    </div>
+</div>
 
 {% if text %}
     {% include "forum/previsualization.part.html" %}
