--- a/templates/forum/edit_post.html
+++ b/templates/forum/edit_post.html
@@ -1,5 +1,6 @@
 {% extends "forum/base.html" %}
 {% load profile %}
+{% load crispy_forms_tags %}
 
 {% block title %}
     Éditer un message
@@ -19,58 +20,7 @@
 {% block content %}
 {% with profile=user|profile%}
 <section>
-    <form action="#previsualisation" method="POST" class="forum-message" id="submit_form">
-        <div class="user">
-            <img src="{{profile.get_avatar_url}}" alt="" class="avatar avatar-link">
-        </div>
-        <div class="message">
-        {% if topic %}
-        
-            <div class="message-content">
-                <label class="control-label" for="id_title">Titre</label>
-                <div class="controls">
-                    <input type="text" name="title" id="id_title"
-                        class="input-xxlarge" value="{{ topic.title }}" />
-                </div>
-            </div>
-            <div class="message-content">
-                <label class="control-label" for="id_subtitle">Sous titre</label>
-                <div class="controls">
-                    <input type="text" name="subtitle" id="id_subtitle"
-                        class="input-xxlarge" value="{{ topic.subtitle }}" />
-                </div>
-            </div>
-        {% endif %}
-            <ul class="message-actions">
-                <li><a href="javascript:void(null);" class="ico-after alert">Fullscreen</a></li>
-            </ul>
-
-            <ul class="message-metadata message-buttons">
-                <li><a href="javascript:void(null);" class="ico-after">Gras</a></li>
-                <li><a href="javascript:void(null);" class="ico-after">Italique</a></li>
-                <li><a href="javascript:void(null);" class="ico-after">Barré</a></li>
-                <li><a href="javascript:void(null);" class="ico-after">Titre 1</a></li>
-                <li><a href="javascript:void(null);" class="ico-after">Titre 2</a></li>
-                <li><a href="javascript:void(null);" class="ico-after">Séparateur horizontal</a></li>
-                <li><a href="javascript:void(null);" class="ico-after">Lien</a></li>
-                <li><a href="javascript:void(null);" class="ico-after">Image</a></li>
-                <li><a href="javascript:void(null);" class="ico-after">Code</a></li>
-                <li><a href="javascript:void(null);" class="ico-after">Citation</a></li>
-            </ul>
-
-            <div class="message-content">
-                <textarea name="text" id="md_text" cols="30" rows="10" {% if topic.is_locked or topic.antispam %}disabled{% endif %} placeholder="Votre message au format Markdown.">{% if topic.is_locked %}Ce sujet est verrouillé.{% elif topic.antispam  %}Vous ne pouvez pas encore poster dans ce sujet (protection antispam de 15 min).{% else %}{{ text }}{%endif%}</textarea>
-            </div>
-
-            <div class="message-bottom">
-                <div class="message-submit">
-                    <button type="submit" name="preview" class="button secondary" {% if topic.is_locked or topic.antispam %}disabled{% endif %}>Aperçu</button>
-                    <button type="submit" {% if topic.is_locked or topic.antispam %}disabled{% endif %} name="answer">Envoyer</button>
-                </div>
-            </div>
-        </div>
-        {% csrf_token %}
-    </form>
+    {% crispy form %}
 </section>
 {% endwith %}
 {% include "forum/previsualization.part.html" %}
