Crispy form to create a new MP

--- a/templates/forum/index.html
+++ b/templates/forum/index.html
@@ -28,7 +28,7 @@
 {% endblock %}
 
 {% block breadcrumb %}
-    <li class="current"><a href="javascript:;">Index</a></li>
+    <li class="current"><a href="#">Index</a></li>
 {% endblock %}
 
 {% block headline-actions %}
