--- a/templates/mp/base.html
+++ b/templates/mp/base.html
@@ -11,3 +11,9 @@
 {% block menu_mp %}
     active
 {% endblock %}
+
+{% block sidebar %}
+<aside class="sidebar mobile-menu-hide">
+	{% block headline-actions %}{% endblock %}
+</aside>
+{% endblock %}
