--- a/templates/mp/index.html
+++ b/templates/mp/index.html
@@ -1,5 +1,6 @@
 {% extends "mp/base.html" %}
 {% load humane_date %}
+{% load upfirstletter %}
 
 {% block title %}
     Liste des MP
@@ -26,27 +27,76 @@
 
 {% block headline-actions %}
 
-<form action="" method="POST" >    
-    <div class="button-group">
-        {% if user.is_authenticated %}
-        <a href="{% url "zds.mp.views.new" %}" class="button">
-            <i class="fi-plus"></i>
-            Nouvel MP
-        </a>
-        {% endif %}
-        <button type="submit" name="delete" class="button secondary">Supprimer</button>
+    <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions">
+        <h3>Actions</h3>
+        <ul>
+            {% if user.is_authenticated %}
+            <li><a href="{% url "zds.mp.views.new" %}">Nouvel MP</a></li>
+            {% endif %}
+        </ul>
     </div>
-    {% endblock %}
+    <form action="" method="POST" >
+        <button type="submit" name="delete" class="button secondary">Supprimer</button>
+    </form>
+{% endblock %}
 
-    {% block content %}
-
+{% block content %}
     <div class="forum-entries">
         {% for topic in privatetopics %}
-            {% include "mp/details_row.part.html" %}
+        <div class="forum-entry">
+            <div class="forum-entry-title
+            {% if user.is_authenticated %}
+                {% if topic.never_read %}
+                    unread
+                {% endif %}
+            {% endif %}">
+                <input name="items" type="checkbox" value="{{ topic.pk }}" />
+                <a href="{{ topic.get_absolute_url }}">
+                    {{ topic.title }}
+                </a>
+                <p>
+                    Participants : 
+                {% with member=topic.author %}
+                    {% include "member/member_item_common.part.html" %}
+                {% endwith %}
+                {% for member in topic.participants.all %}
+                    | {% include "member/member_item_common.part.html" %}
+                {% endfor %}
+                </p>
+            </div>
+            <div class="forum-entry-count">
+                <span class="label">
+                    {{ topic.get_post_count|add:"-1" }}
+                </span>
+            </div>
+            <div class="forum-entry-desc">
+                <p>
+                    {% with member=topic.author %}
+                    Par {% include "member/member_item_common.part.html" %}
+                    {% endwith %}
+                    <br />
+                    {% with answer=topic.get_last_answer %}
+                    {% if answer %}
+                    Dernière rép.
+                    <a href="{{ answer.get_absolute_url }}">
+                        {% with date=answer.pubdate|humane_date %}
+                        {{ date }}
+                        {% endwith %}
+                    </a>
+                    par
+                    {% with member=answer.author %}
+                    {% include "member/member_item_common.part.html" %}
+                    {% endwith %}
+                    {% else %}
+                    Aucune réponse
+                    {% endif %}
+                    {% endwith %}
+                </p>
+            </div>
+            
+        </div>
         {% endfor %}
     </div>
-    {% csrf_token %}
-</form>
 {% include "mp/details_pagination.part.html" %}
 
 {% endblock %}
