--- a/templates/mp/topic.html
+++ b/templates/mp/topic.html
@@ -3,6 +3,7 @@
 {% load markup %}
 {% load humane_date %}
 {% load profile %}
+{% load crispy_forms_tags %}
 
 {% block title %}
     {{ topic.title }}
@@ -19,167 +20,88 @@
 {% endblock %}
 
 {% block breadcrumb %}
-    <li class="current"><a href="javascript:;">{{ topic.title }}</a></li>
+    <li class="current"><a href="#">{{ topic.title }}</a></li>
 {% endblock %}
 
 {% block headline-actions %}
-    {% if user.is_authenticated %}
-        <form action="{% url "zds.mp.views.edit" %}" method="POST"
-        class="topic-actions" >
-            <input type="hidden" name="privatetopic" value="{{ topic.pk }}" />
-            <input type="hidden" name="page" value="{{ nb }}">
-            <div class="button-group">
-                <a href="{% url "zds.mp.views.new" %}" class="button small">
-                    <i class="fi-mail"></i>
-                    Nouvel MP
-                </a>
-                {% if topic.author == user %}
-                <a href="#" data-dropdown="add-member"  data-options="is_hover:true" class="button small secondary">
-                    <i class="fi-torso"></i>
-                    Ajouter un membre
-                </a>
-                <ul id="add-member" class="f-dropdown" data-dropdown-content>
-                    <li>
-                        <input type="text" placeholder="Pseudo" name="username" />
-                    </li>
-                </ul>
-                {% endif %}
-            </div>
-
-            {% csrf_token %}
-        </form>
-    {% endif %}
+    <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions">
+        <h3>Actions<span class="wide"> sur ce MP</span></h3>
+        <ul>
+            {% if user.is_authenticated %}
+            <li><a href="{% url "zds.mp.views.new" %}">Nouvel MP</a></li>
+            {% endif %}
+            {% if topic.author == user %}
+            <li><a href="#">Ajouter un membre</a></li>
+            {% endif %}
+        </ul>
+    </div>
+    <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Participants">
+        <h3>Participants</h3>
+        <ul>
+            <li><a href="{{ topic.author.get_absolute_url }}">{{ topic.author.username }}</a></li>
+            {% for member in topic.participants.all %}
+            <li><a href="{{ member.get_absolute_url }}">{{ member.username }}</a></li>
+            {% endfor %}
+        </ul>
+    </div>
 {% endblock %}
 
 {% block content %}
-<div class="row">
-    <p>
-            <strong>Participants :</strong> 
-        {% with member=topic.author %}
-            {% include "member/member_item_common.part.html" %}
-        {% endwith %}
-        {% for member in topic.participants.all %}
-            | {% include "member/member_item_common.part.html" %}
-        {% endfor %}
-        </p>
-
-</div>
-{% include "mp/topic_pagination.part.html" %}
 
 {% for post in posts %}
-<div class="post {% if forloop.first and nb > 1 %}before{% endif %} {% if post.is_useful %}useful{% endif %}">
-        <div class="row post-head" id="p{{ post.id }}">
-            <div class="large-2 columns post-nickname">
-                <p>
-                    <a href="{{ post.author.get_absolute_url }}">
-                        {{ post.author.username }}
-                    </a>
-                </p>
-            </div>
-            <div class="large-10 columns">
-                <div class="right">
-                    {% if user.is_authenticated %}
-                        <div class="button-group">
-                            {% if post == topic.last_message %}
-                            {% if post.author == user or perms.mp.change_post %}
-                                <a href="/mp/message/editer?message={{ post.pk }}" class="button secondary small">
-                                    <i class="icon-pencil"></i>
-                                    Éditer
-                                </a>
-                            {% endif %}
-                            {% endif %}
-                            {% if not topic.is_locked and not topic.antispam %}
-                                <a href="/mp/message/nouveau?sujet={{ topic.pk }}&amp;cite={{ post.pk }}"
-                                    class="button secondary small">
-                                    <i class="icon-quote-left"></i>
-                                    Citer
-                                </a>
-                            {% endif %}
-                        </div>
-                    {% endif %}
-                </div>
-                <p>
-                    <a href="#p{{ post.pk }}">#</a>
-                    {{ post.pubdate|humane_date }}
-                    {% if not post.update = None %}
-                        (dernière édition {{ post.update|humane_date }})
-                    {% endif %}
-                    {% if forloop.first and nb > 1 %}
-                        &ndash; page précédente
-                    {% endif %}
-                </p>
-            </div>
+<article class="forum-message {% if post.is_useful %} helpful {% endif %}">
+    <div class="user" id="p{{ post.id }}">
+        <a href="{{ post.author.get_absolute_url }}" class="avatar-link">
+            {% with profile=post.author|profile %}
+            <img src="{{ profile.get_avatar_url }}" alt="" class="avatar">
+            {% endwith %}
+        </a>
+    </div>
+    <div class="message">
+        {% if user.is_authenticated %}
+        <ul class="message-actions">
+            {% if post.author = user or perms.forum.change_post %}
+            <li><a href="{% url "zds.mp.views.edit_post" %}?message={{ post.pk }}" class="ico-after edit">Editer</a></li>
+            {% endif %}
+            {% if not topic.is_locked and not topic.antispam %}
+            <li><a href="{% url "zds.mp.views.answer" %}?sujet={{ topic.pk }}&amp;cite={{ post.pk }}" class="ico-after cite">Citer</a></li>
+            {% endif %}
+        </ul>
+        {% endif %}
+
+        <div class="message-metadata">
+            <a href="{{ post.author.get_absolute_url }}" class="username">{{ post.author.username }}</a>
+            <a href="#p{{ post.pk }}" class="date">{{ post.pubdate|humane_date }}</a>
+            {% if not post.update = None %}
+            <i>(Edité {{ post.update|humane_date }} par {{ post.editor }} )</i>
+            {% endif %}
         </div>
-        <div class="row post-content">
-            <div class="large-2 columns hide-for-small post-avatar">
-                {% with profile=post.author|profile %}
-                    <img src="{{ profile.get_avatar_url }}" width="80" height="80" alt="Avatar" />
-                {% endwith %}
-            </div>
-            <div class="large-10 columns">
-                {{ post.text|emarkdown }}
-            </div>
+
+        <div class="message-content">
+            {{ post.text|emarkdown }}
+        </div>
+
+        <div class="message-bottom">
+            {% with profile=post.author|profile %}
+            <p class="signature"> {{profile.sign|emarkdown_inline}} </p>
+            {% endwith %}
         </div>
     </div>
+</article>
 {% endfor %}
 
 {% include "mp/topic_pagination.part.html" %}
 
 {% if user.is_authenticated %}
-<hr />
-<form action="{% url "zds.mp.views.answer" %}?sujet={{ topic.pk }}"
-method="POST" id="submit_form">
-    <div class="row">
-        <div class="large-12 columns">
-            <h3>Ajouter une réponse</h3>
-            {% include "misc/editor.part.html" %}
-            <textarea id='id_text' name="text" rows="10" {% if topic.is_locked or topic.antispam %}disabled{% endif %}
-                placeholder="Votre message au format Markdown.">{% spaceless %}
-                    {% if topic.antispam  %}
-                        Vous ne pouvez pas encore poster dans ce sujet (protection antispam de 15 min).
-                    {% endif %}
-                {% endspaceless %}</textarea>
-        </div>
+{% with profile=user|profile%}
+<section>
+    <div class="user">
+        <img src="{{profile.get_avatar_url}}" alt="" class="avatar avatar-link">
     </div>
-    <div class="row">
-        <div class="large-8 large-centered columns" style="text-align: center;">
-            <button class="button btn-primary" type="submit" {% if topic.is_locked or topic.antispam %}disabled{% endif %}>
-                <i class="icon-reply"></i>
-                Répondre
-            </button>
-            <button type="submit" name="preview" class="button secondary" {% if topic.is_locked or topic.antispam %}disabled{% endif %}>
-                Prévisualiser
-            </button>
-        </div>
-    </div>
-    <input type="hidden" name="last_post" value="{{ last_post_pk }}" />
-    {% csrf_token %}
-</form>
+    {% crispy form %}
+</section>
+{% endwith %}
 {% endif %}
 
-{% endblock %}
-
-{% block additionnal-js %}
-    <script>
-        /* anwser check */
-        $('#submit_form').submit(function(e){
-            if (!$(this).find('textarea').val()) {
-                alert('Votre message ne peut pas être vide.');
-                e.preventDefault();
-            }
-        })
-        /* on button press, store it */
-        $('#edit_form button[type="submit"]').on('click', function() {
-            $('#edit_form').data('button', this.name);    
-        });
-        /* on submit */
-        $('#edit_form').submit(function(e){
-            e.preventDefault();
-            /* build data */
-            var button = $(this).data('button');
-            var data = { topic: {{ topic.pk }}};
-            data[button] = 'true';
-        });
-    </script>
 {% endblock %}
 
