--- a/templates/mp/edit_post.html
+++ b/templates/mp/edit_post.html
@@ -1,4 +1,5 @@
 {% extends "mp/base.html" %}
+{% load crispy_forms_tags %}
 
 {% block title %}
     Éditer un message
@@ -10,69 +11,36 @@
 
 {% block breadcrumb %}
     <li><a href="{{ post.topic.get_absolute_url }}">{{ post.privatetopic.title }}</a></li>
-    <li class="current"><a href="javascript:;">Éditer un message</a></li>
+    <li class="current"><a href="#">Éditer un message</a></li>
+{% endblock %}
+
+{% block headline-actions %}
+    <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions">
+        <h3>Actions<span class="wide"> sur ce MP</span></h3>
+        <ul>
+            {% if user.is_authenticated %}
+            <li><a href="{% url "zds.mp.views.new" %}">Nouvel MP</a></li>
+            {% endif %}
+            {% if topic.author == user %}
+            <li><a href="#">Ajouter un membre</a></li>
+            {% endif %}
+        </ul>
+    </div>
+    <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Participants">
+        <h3>Participants</h3>
+        <ul>
+            <li><a href="{{ topic.author.get_absolute_url }}">{{ topic.author.username }}</a></li>
+            {% for member in topic.participants.all %}
+            <li><a href="{{ member.get_absolute_url }}">{{ member.username }}</a></li>
+            {% endfor %}
+        </ul>
+    </div>
 {% endblock %}
 
 {% block content %}
 <div class="row">
     <div class="large-12 columns">
-        <div>
-            <p>
-            <strong>Participants :</strong> 
-            {% with member=post.privatetopic.author %}
-                {% include "member/member_item_common.part.html" %}
-            {% endwith %}
-            {% for member in post.privatetopic.participants.all %}
-                | {% include "member/member_item_common.part.html" %}
-            {% endfor %}
-            </p>
-        </div>
-        <form action="#previsualisation" method="POST">
-            {% if topic %}
-            <fieldset>
-                <legend>Sujet</legend>
-                <div class="control-group">
-                    <label class="control-label" for="id_title">Titre</label>
-                    <div class="controls">
-                        <input type="text" name="title" id="id_title"
-                            class="input-xxlarge" value="{{ topic.title }}" />
-                    </div>
-                </div>
-                <div class="control-group">
-                    <label class="control-label" for="id_subtitle">Sous titre</label>
-                    <div class="controls">
-                        <input type="text" name="subtitle" id="id_subtitle"
-                            class="input-xxlarge" value="{{ topic.subtitle }}" />
-                    </div>
-                </div>
-            </fieldset>
-            {% endif %}
-            {% include "misc/editor.part.html" %}
-            <fieldset>
-                <legend>Message</legend>
-                <div class="control-group">
-                    <label class="control-label" for="id_text">Texte</label>
-                    <div class="controls">
-                        <textarea id="id_text" name="text"
-                            class="input-block-level" rows="20">{{ text }}</textarea>
-                    </div>
-                </div>
-            </fieldset>
-
-            <div style="text-align: center;">
-                <button type="submit" class="button">
-                    Éditer
-                </button>
-
-                <button type="submit" name="preview" class="button secondary">
-                    Prévisualisation
-                </button>
-
-                <a href="{{ post.get_absolute_url }}" class="button secondary">Annuler</a>
-            </div>
-
-            {% csrf_token %}
-        </form>
+        {% crispy form %}
     </div>
 </div>
 
