Navigation for tutorials in online and offline mode

--- a/templates/tutorial/base.html
+++ b/templates/tutorial/base.html
@@ -14,25 +14,23 @@
 
 {% block sidebar %}
 <aside class="sidebar sommaire mobile-menu-hide">
+    <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions">
+        <h3>Actions<span class="wide"> sur les tutoriels</span></h3>
+        <ul>
+            <li><a href="{% url "zds.tutorial.views.add_tutorial" %}">Nouveau tutoriel</a></li>
+            {% block headline-sub-actions %}{% endblock %}
+        </ul>
+    </div>
 	{% block headline-actions %}{% endblock %}
-	<h3><span class="wide">Télécharger</span></h3>
-    <ul class="sidebar-standalone mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Téléchargements">
-    	{% if perms.tutorial.change_tutorial %}
-    	<li><a href="{% url "zds.tutorial.views.download_markdown" %}?tutoriel={{ tutorial.pk }}">Markdown</a></li>
-    	{% endif %}
-        <li><a href="{% url "zds.tutorial.views.download_pdf" %}?tutoriel={{ tutorial.pk }}">PDF</a></li>
-        <li><a href="{% url "zds.tutorial.views.download_epub" %}?tutoriel={{ tutorial.pk }}">EPUB</a></li>
-    </ul>
+    <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Télécharger">
+    	<h3><span class="wide">Télécharger</span></h3>
+        <ul class="sidebar-standalone mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Téléchargements">
+        	{% if perms.tutorial.change_tutorial %}
+        	<li><a href="{% url "zds.tutorial.views.download_markdown" %}?tutoriel={{ tutorial.pk }}">Markdown</a></li>
+        	{% endif %}
+            <li><a href="{% url "zds.tutorial.views.download_pdf" %}?tutoriel={{ tutorial.pk }}">PDF</a></li>
+            <li><a href="{% url "zds.tutorial.views.download_epub" %}?tutoriel={{ tutorial.pk }}">EPUB</a></li>
+        </ul>
+    </div>
 </aside>
-{% endblock %}
-
-{% block content_out %}
-<article>
-    <header>
-        {% block headline %}{% endblock %}
-    </header>
-    <section class="article-content content-wrapper">
-        {% block content %}{% endblock %}
-    </section>
-</article>
 {% endblock %}
