--- a/templates/tutorial/base.html
+++ b/templates/tutorial/base.html
@@ -30,6 +30,7 @@
         	{% endif %}
             <li><a href="{% url "zds.tutorial.views.download_pdf" %}?tutoriel={{ tutorial.pk }}">PDF</a></li>
             <li><a href="{% url "zds.tutorial.views.download_epub" %}?tutoriel={{ tutorial.pk }}">EPUB</a></li>
+            <li><a href="{% url "zds.tutorial.views.download" %}?tutoriel={{ tutorial.pk }}">Archive</a></li>
         </ul>
     </div>
 </aside>
