--- a/templates/tutorial/view_part_online.html
+++ b/templates/tutorial/view_part_online.html
@@ -44,7 +44,7 @@
 
 {% block headline-actions %}
 	{% with tutorial=part.tutorial %}
-	{% with parts=part.tutorial.parts %}
+	{% with parts=part.tutorial.get_parts %}
     	{% include "tutorial/toc_common_online.html" %}
     {% endwith %}
     {% endwith %}
